# compliantGPTSummarizer

./: README.md  home.py  privateGPT.py  pyproject.toml
archive/: keys.txt  state_of_the_union.txt
archive/titanic/: titanic.csv
source_documents/: email1.txt  email10.txt  email2.txt  email3.txt  email4.txt  email5.txt  email6.txt  email7.txt  email8.txt  email9.txt
