[tool.poetry]
name = "privategpt"
version = "0.1.0"
description = ""
authors = ["Andrew Siah <andrew.siah@abra.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "0.0.166"
pygpt4all = "1.1.0"
chromadb = "0.3.22"
llama-cpp-python = "0.1.48"
urllib3 = "1.26.6"
pdfminer-six = "20221105"
streamlit = "^1.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
